# wheelchair-assistant

in-vehicle-stack/scenarios/wheelchair_assistant_use_case/applications/wheelchair_assistant_state_manager/: Dockerfile  build_image.sh  pyproject.toml  run_manager.sh  wheelchair_asistant_state_manager.py
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/applications/wheelchair_assistant_state_manager/ank/: ankaios_pb2.py
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/applications/wheelchair_assistant_state_manager/digital_twin/: digital_twin_get_provider_pb2.py  digital_twin_get_provider_pb2.pyi  digital_twin_get_provider_pb2_grpc.py
